update support database update to 1.7